2015-02-04 Matt
	* Updating first draft.  Still getting error but need to look over for bugs.

2015-01-16 Matt
	* Adding ChangeLog and dir structure
	* Including first draft of code. Realize now I don't use plane information, so solution
		is not really unique.  Need to track down on paper where I go wrong