@@ -20,43 +20,53 @@ class Calculator
  public:
   
   // Constructor
-  Calculator(float nx, float ny, float nz, // Normal vector
-	     float x0, float y0, float z0, // center of plane
-	     float ind0,                   // Index of refraction 0
-	     float ind1,                   // Index of refraction 1
-	     bool dbg = false);
+  Calculator(TVector3 v_norm,      // Normal to the plane
+	     TVector3 planeCenter, // Center of the plane position
+	     float xwidth,         // distance of cube in x
+	     float ywidth,         // distance of cube in y
+	     float zwidth,         // distance of cube in z
+	     float ind0,           // index of refraction 0
+	     float ind1,           // index of refraction 1
+	     bool dbg = false);        
 
   // Destructor
   virtual ~Calculator();
 
+
   // Method to retrieve intersection point
-  void getIntPoint(float &xi, float &yi, float &zi, // Intersection Point
-		   float x0, float y0, float z0,    // Point inside material 0
-		   float x1, float y1, float z1);   // Point inside material 1
+  TVector3 getIntPoint(TVector3 pt,    // Track position
+		       TVector3 pa);   // Antenna position
   
 
   // Set the debug flag
   void setDebug(){ m_dbg = true; };
+
  private:
 
   // Calculate the rotation matrix for z direction
-  void setFirstRotation();
+  void setZRotation(TVector3 k, TVector3 normal);
 
-  // Calculate the rotation matrix for y direction
-  void setSecondRotation(TVector3 p0, TVector3 p1);
-  
-  // Rotate the intersection point back to normal coords
-  TVector3 rotateBack(TVector3 intPoint);
+  // Scan values for int point
+  TVector3 scan(TVector3 pt, TVector3 pa);
+
+  // Get the gradient for a point
+  float getGradient(TVector3 pt,    // track point
+		    TVector3 pa,    // antenna point
+		    TVector3 pi,    // potential interaction point
+		    int option);
 
   // Variables
   TVector3 norm;            // Normal vector to plane
-  TVector3 plane;           // Center of the plane
+  TVector3 planeC;          // Center of the plane
+  float x_ice;              // x width of iceblock
+  float y_ice;              // y width of iceblock
+  float z_ice;              // z width of iceblock
 
   float n0;                 // Index of refraction for material 0
   float n1;                 // Index of refraction for material 1
 
-  TMatrixF* firstRotation;  // Rotate into z direction
-  TMatrixF* secondRotation; // Rotate into x-y plane
+  TMatrixF* zRotation;      // Rotate into z direction
+  TMatrixF* identity;       // Identity matix
 
   bool m_dbg;               // Debug flag
 
