@@ -1,3 +1,6 @@
+2015-06-02 Matt:
+	* Updating second draft.  Still buggy when including some tilts...
+
 2015-02-04 Matt
 	* Updating first draft.  Still getting error but need to look over for bugs.
 
